Feat: Home section

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
+
+
+/* styles.css */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #000; /* nền đen toàn trang */
+  color: white;           /* chữ trắng mặc định */
+}
+
+app-root {
+  display: block;         /* đảm bảo app-root chiếm toàn bộ width */
+  min-height: 100%;
+  background-color: #000; /* đảm bảo nền đen cho app-root */
+}
