--- a/src/app/app.less
+++ b/src/app/app.less
@@ -19,6 +19,6 @@
   transform: scale(1.2); /* to hơn 20% */
 }
 
-.section {
-  scroll-margin-top: 100px; /* bằng hoặc lớn hơn chiều cao navbar */
-}
+// .section {
+//   scroll-margin-top: 100px; /* bằng hoặc lớn hơn chiều cao navbar */
+// }
