--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,48 +1,35 @@
-<div class="container mt-5 text-center mb-4">
-  <div class="row">
-    <!-- Cột bên trái: Card -->
-    <div class="col-md-4 d-flex justify-content-center align-items-center">
-      <div class="card text-center w-100 p-3 bg-dark text-white shadow-lg rounded-5">
-        <!-- Div ảnh -->
-        <div class="mb-3">
-          <img
-            src="assets/profile.jpg"
-            alt="My Photo"
-            class="img-fluid rounded-circle"
-            style="width: 300px; height: 300px"
-          />
-        </div>
+<!-- Home Component -->
+<div class="home-section position-relative vh-100 d-flex align-items-center justify-content-end" >
+  <!-- Background image với overlay mờ -->
+  <div class="home-bg position-absolute top-0 start-0 w-100 h-100"></div>
+  <div class="overlay position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-50"></div>
 
-        <!-- Div thông tin -->
-        <div class="info-text">
-          <h3>Nguyễn Quang Phước</h3>
-          <p>Full Stack Developer</p>
-          <p>
-            <a href="https://www.gtsc.vn/" target="_blank" class="text-white text-decoration-none">
-              @GTSC</a
-            >, Hà Nội
-          </p>
-        </div>
+  <!-- Container thông tin nổi lên -->
+  <div class="home-info text-end text-white p-4 position-relative">
+    <h1 class="display-4 fw-bold mb-2">Nguyễn Quang Phước</h1>
+    <p class="subtitle fs-4 mb-1">Software Developer</p>
+    <p class="mb-3">
+      <a
+        href="https://www.gtsc.vn/"
+        target="_blank"
+        class="text-white text-decoration-none fw-semibold"
+      >
+        @GTSC </a
+      >, Hà Nội
+    </p>
 
-        <!-- Div social -->
-        <div class="social-links mt-1 d-flex justify-content-center gap-3">
-          <a href="https://www.facebook.com/ffuoc.21" target="_blank" class="social-icon">
-            <i class="fab fa-facebook"></i>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/ph%C6%B0%E1%BB%9Bc-nguy%E1%BB%85n-quang-337a07272/"
-            target="_blank"
-            class="social-icon"
-          >
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Cột bên phải: Background Image -->
-    <div class="col-md-8 d-flex justify-content-center align-items-center">
-      <div class="home-bg-image"></div>
+    <!-- Social Links -->
+    <div class="social-links d-flex justify-content-end gap-3">
+      <a href="https://www.facebook.com/ffuoc.21" target="_blank" class="text-white fs-4">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/ph%C6%B0%E1%BB%9Bc-nguy%E1%BB%85n-quang-337a07272/"
+        target="_blank"
+        class="text-white fs-4"
+      >
+        <i class="fab fa-linkedin"></i>
+      </a>
     </div>
   </div>
 </div>
