--- a/src/app/components/home/home.less
+++ b/src/app/components/home/home.less
@@ -11,7 +11,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/portfolio/assets/profile.jpg');
+  // background-image: url('/portfolio/assets/profile.jpg');
+  background-image: url('/assets/profile.jpg');
   background-size: cover;
   background-position: center;
   filter: brightness(60%);
