Fix: Dùng svg thay icon

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 <nav class="d-flex justify-content-end fixed-top m-4">
   <ul class="list-unstyled d-flex bg-dark rounded-3 px-2 py-2 shadow-lg">
     <li class="px-3">
-      <a href="#home-sector" class="nav-icon active" (click)="scrollTo('home-sector', $event)">
+      <a href="#home-sector" class="nav-icon" (click)="scrollTo('home-sector', $event)">
         <i class="fas fa-home"></i>
       </a>
     </li>
