--- a/src/app/app.less
+++ b/src/app/app.less
@@ -12,7 +12,7 @@
 
 .nav-icon.active,
 .nav-icon:hover {
-  background-color: #06570c;
+  background-color: #92c480;
   color: white;
   border-radius: 50%;
   cursor: pointer;
