--- a/src/app/components/stack/stack.html
+++ b/src/app/components/stack/stack.html
@@ -11,7 +11,7 @@
           <h5 class="card-title mb-3">{{ category.name }}</h5>
           <div class="stack-items d-flex flex-wrap justify-content-center gap-3">
             <div class="stack-item" #stackItem *ngFor="let item of category.items">
-              <i class="{{ item.iconClass }} fa-2x"></i>
+              <img class="stack-svg" [src]="item.linkImage" [alt]="item.name" width="40" height="40" />
               <div class="item-name mt-1">{{ item.name }}</div>
             </div>
           </div>
