--- a/src/app/components/stack/stack.less
+++ b/src/app/components/stack/stack.less
@@ -34,10 +34,10 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 10px rgba(56, 56, 56, 0.5);
 
     opacity: 0;
-    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+    transition: opacity 2s ease-out, transform 2s ease-out;
 
     &.visible {
       opacity: 1;
@@ -49,7 +49,7 @@
 /* Card lớn */
 .card.p-5,
 .card {
-  background: #000;
+  background: #00000000;
   border-radius: 1rem;
   padding: 2.5rem;
   margin: auto;
@@ -60,7 +60,7 @@
 
 /* Card con */
 .card.h-100 {
-  background: #202020;
+  background: #666666;
   border-radius: 1rem;
   padding: 1.5rem;
   color: #fff;
@@ -80,20 +80,14 @@
   }
 }
 
-/* Stack items */
-.stack-items {
-  padding-top: 0.5rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
-}
 
 .stack-item {
+  padding-top: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   opacity: 0;
+  gap: 1rem;
   transform: translateY(40px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 
