--- a/src/app/app.html
+++ b/src/app/app.html
@@ -39,17 +39,18 @@
     <app-home></app-home>
   </section>
 
-  <section id="stack-sector" class="section vh-100">
+  <section id="stack-sector" class="section vh-100" style="margin-bottom: 200px">
     <app-stack></app-stack>
-  </section>
-
-  <!-- <section id="tools-sector" class="section vh-100">
-    <app-tools></app-tools>
   </section>
 
   <section id="experience-sector" class="section vh-100">
     <app-experience></app-experience>
   </section>
+  <!-- <section id="tools-sector" class="section vh-100">
+    <app-tools></app-tools>
+  </section>
+
+  
 
   <section id="thoughts-sector" class="section vh-100">
     <app-thoughts></app-thoughts>
