--- a/src/app/components/home/home.less
+++ b/src/app/components/home/home.less
@@ -12,7 +12,7 @@
   width: 100%;
   height: 100%;
   // background-image: url('/portfolio/assets/profile.jpg');
-  background-image: url('/assets/profile.jpg');
+  background-image: url('/assets/images/profile.jpg');
   background-size: cover;
   background-position: center;
   filter: brightness(60%);
