--- a/src/app/components/stack/stack.less
+++ b/src/app/components/stack/stack.less
@@ -24,17 +24,17 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -80px);
-    font-size: 15rem;
+    font-size: 12rem;
     font-weight: bold;
     z-index: 1;
     pointer-events: none;
     user-select: none;
 
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.25));
+    background: linear-gradient(to right, rgb(0, 0, 0), rgba(255, 255, 255, 0.5));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
-    text-shadow: 2px 2px 10px rgba(56, 56, 56, 0.5);
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 
     opacity: 0;
     transition: opacity 2s ease-out, transform 2s ease-out;
