--- a/src/app/app.html
+++ b/src/app/app.html
@@ -43,20 +43,11 @@
     <app-stack></app-stack>
   </section>
 
-  <section id="experience-sector" class="section vh-100">
+  <section id="experience-sector" class="section vh-100" style="margin-bottom: 200px">
     <app-experience></app-experience>
-  </section>
-  <!-- <section id="tools-sector" class="section vh-100">
-    <app-tools></app-tools>
-  </section>
-
-  
-
-  <section id="thoughts-sector" class="section vh-100">
-    <app-thoughts></app-thoughts>
   </section>
 
   <section id="contact-sector" class="section vh-100">
     <app-contact></app-contact>
-  </section> -->
+  </section>
 </main>
