--- a/src/app/components/experience/experience.html
+++ b/src/app/components/experience/experience.html
@@ -9,15 +9,15 @@
       <div class="stats col-md-3 text-end left-side">
         <div class="stat-item mb-4">
           <h3>2+</h3>
-          <p>Years Experience</p>
+          <p>Years</p>
         </div>
         <div class="stat-item mb-4">
           <h3>20</h3>
-          <p>Projects Completed</p>
+          <p>Projects</p>
         </div>
         <div class="stat-item mb-4">
           <h3>3</h3>
-          <p>Companies Worked</p>
+          <p>Companies</p>
         </div>
       </div>
 
