--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,19 +35,19 @@
 
 <!-- MAIN CONTENT -->
 <main>
-  <section id="home-sector" class="section vh-100" style="margin-bottom: 200px">
+  <section id="home-sector" class="section" style="margin-bottom: 200px; min-height: 100%;">
     <app-home></app-home>
   </section>
 
-  <section id="stack-sector" class="section vh-100" style="margin-bottom: 200px">
+  <section id="stack-sector" class="section" style="margin-bottom: 200px; min-height: 100vh;">
     <app-stack></app-stack>
   </section>
 
-  <section id="experience-sector" class="section vh-100" style="margin-bottom: 200px">
+  <section id="experience-sector" class="section" style="margin-bottom: 200px; min-height: 100vh;">
     <app-experience></app-experience>
   </section>
 
-  <section id="contact-sector" class="section vh-100">
+  <section id="contact-sector" class="section; min-height: 100vh;">
     <app-contact></app-contact>
   </section>
 </main>
