--- a/src/app/components/experience/experience.html
+++ b/src/app/components/experience/experience.html
@@ -6,7 +6,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="stats col-md-3 text-end left-side">
+      <div class="stats col-md-4 text-center">
         <div class="stat-item mb-4">
           <h3>2+</h3>
           <p>Years</p>
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <div class="right-side">
+      <div class="col-md-8 text-center">
         <div class="timeline">
           <div
             class="timeline-item"
