--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,8 +1,8 @@
 <!-- Home Component -->
-<div class="home-section position-relative vh-100 d-flex align-items-center justify-content-end" >
+<div class="home-section position-relative vh-100 d-flex align-items-center justify-content-end navbar-expand-sm" >
   <!-- Background image với overlay mờ -->
   <div class="home-bg position-absolute top-0 start-0 w-100 h-100"></div>
-  <div class="overlay position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-50"></div>
+  <!-- <div class="overlay position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-50"></div> -->
 
   <!-- Container thông tin nổi lên -->
   <div class="home-info text-end text-white p-4 position-relative">
@@ -19,7 +19,7 @@
     </p>
 
     <!-- Social Links -->
-    <div class="social-links d-flex justify-content-end gap-3">
+    <div class="social-links d-flex flex-row justify-content-end gap-3">
       <a href="https://www.facebook.com/ffuoc.21" target="_blank" class="text-white fs-4">
         <i class="fab fa-facebook"></i>
       </a>
