--- a/src/app/components/stack/stack.html
+++ b/src/app/components/stack/stack.html
@@ -4,7 +4,7 @@
     <div class="stack-title-bg" #stackBg>STACKS</div>
   </div>
 
-  <div class="card p-5 shadow-lg">
+  <div class="card p-5 justify-content-center">
     <div class="row g-3">
       <div class="col-md-4" *ngFor="let category of categories">
         <div class="card h-100 text-center p-3 shadow-sm stack-card">
