--- a/src/app/components/experience/experience.less
+++ b/src/app/components/experience/experience.less
@@ -207,6 +207,44 @@
 
 /* Mobile */
 @media (max-width: 575.98px) {
+  .experience-title-wrapper {
+    position: relative;
+    margin: 1rem 0 1.5rem;
+
+    .experience-title {
+      position: relative;
+      font-size: 3rem;
+      z-index: 2;
+      font-weight: 700;
+    }
+
+    .experience-title-bg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -80px);
+      font-size: 5rem;
+      font-weight: bold;
+      z-index: 1;
+      pointer-events: none;
+      user-select: none;
+
+      background: linear-gradient(to right, rgb(0, 0, 0), rgba(255, 255, 255, 0.5));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+
+      opacity: 0;
+      transition: opacity 2s ease-out, transform 2s ease-out;
+
+      &.visible {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
   .row {
     display: flex !important;
     flex-wrap: wrap !important;
@@ -305,7 +343,7 @@
 
   .timeline-logo {
     width: auto;
-    height: 40px;
+    height: 30px !important;
     object-fit: contain;
     transition: transform 0.3s ease;
   }
