--- a/src/app/components/home/home.less
+++ b/src/app/components/home/home.less
@@ -10,8 +10,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/portfolio/assets/images/profile.jpg');
-    // background-image: url('/assets/images/profile.jpg');
+    // background-image: url('/portfolio/assets/images/profile.jpg');
+    background-image: url('/assets/images/profile.jpg');
     background-size: cover;
     background-position: center;
     filter: brightness(60%);
@@ -54,6 +54,11 @@
 
 /* Mobile */
 @media (max-width: 575.98px) {
+  .home-bg {
+    background-image: url('/assets/images/profile1.jpg') !important;
+    z-index: 1;
+  }
+
   .home-info {
     right: 50%;
     transform: translate(50%, -50%);
