--- a/src/app/components/stack/stack.less
+++ b/src/app/components/stack/stack.less
@@ -80,7 +80,6 @@
   }
 }
 
-
 .stack-item {
   padding-top: 0.5rem;
   display: flex;
@@ -114,5 +113,44 @@
     font-size: 1rem;
     margin-top: 0.5rem;
     text-align: center;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .stack-title-wrapper {
+    position: relative;
+    margin: 1rem 0 3rem;
+
+    .stack-title {
+      position: relative;
+      font-size: 4rem;
+      z-index: 2;
+    }
+
+    .stack-title-bg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -80px);
+      font-size: 7rem;
+      font-weight: bold;
+      z-index: 1;
+      pointer-events: none;
+      user-select: none;
+
+      background: linear-gradient(to right, rgb(0, 0, 0), rgba(255, 255, 255, 0.5));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+
+      opacity: 0;
+      transition: opacity 2s ease-out, transform 2s ease-out;
+
+      &.visible {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+      }
+    }
   }
 }
