--- a/src/app/components/experience/experience.less
+++ b/src/app/components/experience/experience.less
@@ -83,7 +83,7 @@
 }
 
 .timeline {
-  left: 20%;
+  left: 0;
   position: relative;
   margin: 0 auto;
   padding: 2rem 0;
@@ -94,7 +94,7 @@
     content: '';
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 75%;
     width: 4px;
     height: 100%;
     background: #ccc;
@@ -110,55 +110,25 @@
     transform: translateY(50px);
     transition: all 0.6s ease-out;
     cursor: pointer;
-
+    left: 0;
+    text-align: right;
     &.show {
       opacity: 1;
       transform: translateY(0);
     }
 
-    &.left {
-      left: 0;
-      text-align: right;
-
-      .timeline-content {
-        margin-right: 2rem;
-        margin-left: auto;
-        padding-right: 1rem;
-      }
-
-      &:after {
-        content: '';
-        position: absolute;
-        top: 20px;
-        right: -8px;
-        width: 16px;
-        height: 16px;
-        background: #37d35b;
-        border-radius: 50%;
-        border: 4px solid white;
-        z-index: 1;
-      }
-    }
-
-    &.right {
-      left: 50%;
-
-      .timeline-content {
-        margin-left: 2px;
-      }
-
-      &:after {
-        content: '';
-        position: absolute;
-        top: 20px;
-        left: -8px;
-        width: 16px;
-        height: 16px;
-        background: #37d35b;
-        border-radius: 50%;
-        border: 4px solid white;
-        z-index: 1;
-      }
+    &:after {
+      content: '';
+      position: absolute;
+      top: 20px;
+      left: 150%; /* cùng vị trí với vạch */
+      transform: translateX(-50%); /* căn giữa chấm */
+      width: 16px;
+      height: 16px;
+      background: #37d35b;
+      border-radius: 50%;
+      border: 4px solid white;
+      z-index: 1;
     }
 
     .timeline-content {
